--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+0.43  2022-09-    lichtkind
+-------
+    * = post first release bug fix release
+
 0.42  2022-09-14  lichtkind
 -------
     * = post first release bug fix release
