--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
-0.43  2022-09-    lichtkind
+0.43  2022-09-15  lichtkind
 -------
-    * = post first release bug fix release
+    * = GUI cleanup
+    * + organize setting in tabs
+    * + clean up command buttons into a main menu
+    * + progress bar for drawing
     * ! smooth loading of settings without sketch triggering event loops
     * ~ doc typos
 
