--- a/Changes
+++ b/Changes
@@ -1,3 +1,11 @@
+0.50  2022-10-10  lichtkind
+-------
+    * = maintenance and one planned major feature
+    * * frequency base factors for relative values to other pendula and natural constants
+    * ? added and rewrote some docs
+    * ! save frequency decimals in INI
+    * ! fixed tests srezic++
+    
 0.45  2022-10-08  lichtkind
 -------
     * = maintenance
