--- a/TODO
+++ b/TODO
@@ -6,8 +6,7 @@ ROADMAP:
 TODO's:
 -------
 
-resizable paint board
 more compact gui
 better optics on mac
-changeable base value
 mod matrix
+test optics on windows
