--- a/Changes
+++ b/Changes
@@ -1,3 +1,9 @@
+0.51  2022-10-14  lichtkind
+-------
+    * = maintenance
+    * / put custom widgets in own name space
+    * ! crash when using image size menu
+
 0.50  2022-10-10  lichtkind
 -------
     * = maintenance and one planned major feature
