--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+0.57  2022-10-18  lichtkind
+-------
+    * = maintenance
+    * ? added some POD
+
 0.56  2022-10-18  lichtkind
 -------
     * = maintenance
