some gui cleanu

--- a/Changes
+++ b/Changes
@@ -2,6 +2,7 @@
 -------
     * = maintenance
     * ? added some POD
+    * " cleaned left lower corner of GUI
 
 0.56  2022-10-18  lichtkind
 -------
