--- a/Changes
+++ b/Changes
@@ -1,9 +1,12 @@
-0.57  2022-10-18  lichtkind
+0.57  2022-10-25  lichtkind
 -------
-    * = maintenance
+    * = maintenance and starting mod matrix
+    * + change main function of X and Y pendulum
+    * + sped up sketch drawing
     * ? cleanep up POD from incorrect leftover bits
     * ? added some POD
     * " cleaned left lower corner of GUI
+    * " made all comboboxes readonly
 
 0.56  2022-10-18  lichtkind
 -------
