--- a/Changes
+++ b/Changes
@@ -1,3 +1,9 @@
+0.58  2022-10-25  lichtkind
+-------
+    * = maintenance and starting mod matrix
+    * " optimized GUI of panel section Pen LIne
+
+
 0.57  2022-10-25  lichtkind
 -------
     * = maintenance and starting mod matrix
