--- a/Changes
+++ b/Changes
@@ -1,6 +1,12 @@
-0.58  2023-02-05  lichtkind
+0.59  2023-03-26  lichtkind
 -------
-    * = maintenance and starting mod matrix
+    * = fixes
+    * ! reverse direction in X and Y works again
+    * ! setting line > connect gets now restored
+
+0.58  2023-02-23  lichtkind
+-------
+    * = maintenance
     * " optimized GUI of panel section Pen LIne
     * ~ moved config to ~/.config/harmonograph
     * ! config parser had silent bug
