--- a/Changes
+++ b/Changes
@@ -1,7 +1,11 @@
-0.60  2023-03-26  lichtkind
+0.61  2023-09-30  lichtkind
 -------
-    * = enhancements and fixes
+    * = bug fix
+    * adopt code to new GTC API
 
+0.60  2023-07-08  lichtkind
+-------
+    * = bug fix
     * ! using other trig function in mod matrix section does no more crash (div 0)
 
 0.59  2023-03-26  lichtkind
