--- a/Changes
+++ b/Changes
@@ -1,3 +1,10 @@
+0.65  2023-10-30  lichtkind
+-------
+    * = mid feature release
+    * configurable R pendulum rotation matrix
+    * configurable computation variables for all major ops in mod matrix
+    + introdus radius damping for pendulum R
+
 0.61  2023-09-30  lichtkind
 -------
     * = bug fix
