--- a/Changes
+++ b/Changes
@@ -1,3 +1,11 @@
+0.69  2023-10-31  lichtkind
+-------
+    * = cleanup release
+    * " see saved (settings) status in title
+    * ' POD fix in GUI part listing
+    * ! increment file name counter only if file is missing
+    * ! remove tests for removed dialogs
+
 0.68  2023-10-29  lichtkind
 -------
     * = minor feature and cleanup release
