--- a/Changes
+++ b/Changes
@@ -1,3 +1,15 @@
+0.70  2023-11-05  lichtkind
+-------
+    * = cleanup cleanup release
+    * ' remove POD mentioning removed dialogs
+    * ' minor POD updates to recent changes
+    * ~ sketches also can draw dots if wanted
+    * ~ line checkbox also triggers new sketch (but colors still don't)
+    * ~ reopen recent menu has right order
+    * / remove some dead code
+    * ! dont use deleted dialogs
+    * ! all dialogs remember dir
+
 0.69  2023-10-31  lichtkind
 -------
     * = cleanup release
@@ -31,7 +43,7 @@
     * = mid feature release
     * configurable R pendulum rotation matrix
     * configurable computation variables for all major ops in mod matrix
-    + introdus radius damping for pendulum R
+    + introduce radius damping for pendulum R
 
 0.61  2023-09-30  lichtkind
 -------
