--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 0.72  2023-11-17  lichtkind
 -------
     * = minor fix
+    * + sync both color stores of color picker
 
 0.71  2023-11-17  lichtkind
 -------
