--- a/Changes
+++ b/Changes
@@ -5,6 +5,7 @@
     * * copy color tab from cellgraph
     * * much more pen setting
     * * extended modulation tab
+    * ? more GUI documentation
     * + frequency damping acceleration settings (parallel radius settings)
 
 0.71  2023-11-17  lichtkind
