--- a/Changes
+++ b/Changes
@@ -1,11 +1,15 @@
-1.0  2025-04-01  lichtkind
+1.0  2025-04-08  lichtkind
 -------
     * = major feature release
     * * added 2 epicycle pendula
     * * reworked visual settings tab with more options and better control
     * * reworked functions tab with more options
-    * * same color selector tab from cellgraph
+    * * same color selector tab as cellgraph, now 10 not 2 colors
     * + pen style option
+    * + radius damping acceleration
+    * + optional preventing damping into negative values for radius and freq
+    * + invert color change speed
+    * ~ adapt
     * ? more GUI documentation
     * + frequency damping acceleration settings (parallel radius settings)
 
