--- a/Changes
+++ b/Changes
@@ -1,3 +1,9 @@
+1.01 2025-04-08  lichtkind
+-------
+    * = minor fix
+    * ' POD fixes
+
+
 1.0  2025-04-08  lichtkind
 -------
     * = major feature release
