--- a/Changes
+++ b/Changes
@@ -1,7 +1,9 @@
 1.01 2025-04-08  lichtkind
 -------
     * = minor fix
-    * ' POD fixes
+    * + added supergolden ration constant
+    * ? POD fixes
+    * / remove some dead code
 
 
 1.0  2025-04-08  lichtkind
@@ -59,7 +61,7 @@
     * ~ greater color change dynamics range
     * - remove unused dialogs (documentation only with POD)
     * " reworked about dialog
-    * ' POD typo
+    * ? POD typo
     * ? extended documentation
 
 0.67  2023-10-28  lichtkind
