--- a/Changes
+++ b/Changes
@@ -1,8 +1,9 @@
-1.01 2025-04-08  lichtkind
+1.01 2025-08-13  lichtkind
 -------
-    * = minor fix
+    * = minor fix release
     * + added supergolden ration constant
     * ? POD fixes
+    * & adapt to new GTC 1.9 API
     * / remove some dead code
 
 
