cut unneeded code

--- a/Changes
+++ b/Changes
@@ -1,7 +1,7 @@
 1.01 2025-09-03  lichtkind
 -------
     * = minor fix release = 3 fixes
-    * + added supergolden ration constant
+    * + added supergolden ratio constant
     * ? POD fixes
     * & adapt to new GTC 1.9 API
     * / remove some dead code
